[package]
name = "pingMe_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
envy = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
